--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Nina carduci: La révolution de la retouches photo, Shooting et album Photos</title>
-	<meta name="description" content="Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer. ">
+	<meta name="description"
+		content="Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer. ">
 	<!-- opengraph facebook -->
 	<link rel="shortcut icon" href="./assets/images/camera.png">
-    <meta property="og:title" content="Découvrez mon super site">
-    <meta property="og:description" content="Explorez des contenus passionnants et innovants.">
-    <meta property="og:image" content="https://exemple.com/image.jpg">
-    <meta property="og:url" content="https://exemple.com">
+	<meta property="og:title" content="Découvrez mon super site">
+	<meta property="og:description" content="Explorez des contenus passionnants et innovants.">
+	<meta property="og:image" content="https://exemple.com/image.jpg">
+	<meta property="og:url" content="https://exemple.com">
 	<!-- twitter cards -->
-    <meta name="twitter:title" content="Mon Site Web">
-    <meta name="twitter:description" content="Découvrez des contenus passionnants et innovants sur mon site.">
-    <meta name="twitter:image" content="https://exemple.com/image.jpg">
-    <meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Mon Site Web">
+	<meta name="twitter:description" content="Découvrez des contenus passionnants et innovants sur mon site.">
+	<meta name="twitter:image" content="https://exemple.com/image.jpg">
+	<meta name="twitter:card" content="summary_large_image">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
@@ -25,12 +26,14 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
-	<meta charset="UTF-8">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+		integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
-	<script src="./assets/scripts.js"></script>
+	
 </head>
 
 <body>
@@ -48,7 +51,6 @@
 		</div>
 	</div>
 	<div id="header">
-
 		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 			<div class="carousel-indicators">
 				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -60,16 +62,13 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji.webp" class="d-block w-100"
-						alt="Photo ryoji-iwata">
+					<img src="./assets/images/slider/ryoji.webp" class="d-block w-100" alt="Photo ryoji-iwata">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas.webp" class="d-block w-100"
-						alt="Photo nicholas-green">
+					<img src="./assets/images/slider/nicholas.webp" class="d-block w-100" alt="Photo nicholas-green">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/edward.webp" class="d-block w-100"
-						alt="Photo edward-cisneros">
+					<img src="./assets/images/slider/edward.webp" class="d-block w-100" alt="Photo edward-cisneros">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -105,32 +104,32 @@
 		<h3 class="title">Portfolio</h3>
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
-				<img data-gallery-tag="Concert" class="gallery-item"
-					src="./assets/images/gallery/concerts/aaron.webp" alt="aaron-paul" />
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron.webp"
+					alt="aaron-paul" />
 
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/ali.webp" alt="ali-morshedlou"/>
+					src="./assets/images/gallery/entreprise/ali.webp" alt="ali-morshedlou" />
 
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/jason.webp" alt="jason-goodman"/>
+					src="./assets/images/gallery/entreprise/jason.webp" alt="jason-goodman" />
 
-				<img data-gallery-tag="Mariages" class="gallery-item"
-					src="./assets/images/gallery/mariage/hannah.webp" alt="hannah-busing"/>
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah.webp"
+					alt="hannah-busing" />
 
-				<img data-gallery-tag="Portrait" class="gallery-item"
-					src="./assets/images/gallery/portraits/ade.webp" alt="ade-tunji"/>
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade.webp"
+					alt="ade-tunji" />
 
-				<img data-gallery-tag="Mariages" class="gallery-item"
-					src="./assets/images/gallery/mariage/jakob.webp" alt="jakob-owens" />
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob.webp"
+					alt="jakob-owens" />
 
-				<img data-gallery-tag="Portrait" class="gallery-item"
-					src="./assets/images/gallery/portraits/nino.webp" alt="nicholas-green"/>
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino.webp"
+					alt="nicholas-green" />
 
-				<img data-gallery-tag="Concert" class="gallery-item"
-					src="./assets/images/gallery/concerts/austin.webp" alt="austin-neill" />
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin.webp"
+					alt="austin-neill" />
 
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/campos.webp" alt="mateus-campos"/>
+					src="./assets/images/gallery/entreprise/campos.webp" alt="mateus-campos" />
 			</div>
 		</div>
 		<div class="quote">
@@ -199,12 +198,13 @@
 				<h6>Une question ? Une demande de devis ?</h6>
 				<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 				<form action="" method="post">
-					<label>Nom</label>
+					<label for="nom">Nom</label>
 					<input type="text" name="nom" id="nom" placeholder="Nom">
-					<label>Email</label>
+					<label for="email">Email</label>
 					<input type="email" name="email" id="email" placeholder="Email">
-					<label>Message</label>
-					<textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message here..."></textarea>
+
+					<textarea name="message" id="message" cols="30" rows="10"
+						placeholder="Votre message here..."></textarea>
 					<input type="submit" value="Envoyer" />
 				</form>
 			</div>
@@ -213,21 +213,57 @@
 			</div>
 		</div>
 	</div>
+	<div class="contact" id="contacter">
+		<i class="far fa-times-circle" id="closeBtn"></i>
+		<p>
+			Contact moi au : <br>
+			05 56 67 78 89
+		</p>
+	
+	</div>
 	<footer>
-		<ul>
-			<li>Tel:05 56 67 78 89 </li>
-			<li>Heure d'ouverture:10h à 19h.
-				<strong>Je réponds au téléphone du lundi au vendredi de </strong>
-			</li>
-			<li> address: 68 avenue Alsace-Lorraine, 33200 Bordeaux.</details></>
-			</li>
-		</ul>
-		<div>
-			 <p>Reseaux sociaux</p>
-			 <a href="htt">Facebook</a>
-			 <a href="">twitter</a>
+		<h6>Contact nous:</h6>
+		<div class="infos">
+			
+			<div class="tel">
+				<i class="fa-solid fa-phone"></i> 05 56 67 78 89
+			</div>
+			<div class="horaire"><i class="fa-solid fa-clock"></i> Je réponds au téléphone du lundi au vendredi de:  <br />
+				10h à 19h.
+			</div>
+
+			<div class="adresse"> <i class="fa-solid fa-address-book"></i> <strong> 68 avenue Alsace-Lorraine, 33200
+					Bordeaux.</strong></details>
+
+			</div>
+			<div class="reseaux">
+				<p>Reseaux sociaux: </p>
+				<ul>
+					<li>
+						<i class="fa-brands fa-facebook"> 
+						<a href="https://www.facebook.com" target="_blank">
+							<span>Facebook</span>
+						</a>
+						</i>
+						
+					</li>
+					<li>
+						<i class="fa-brands fa-twitter"> 
+							<a href="https://www.twitter.com" target="_blank">
+								<span>twitter</span>
+							</a>
+							</i>
+					</li>
+				</ul>
+	
+	
+			</div>
 		</div>
+
+		
+
 	</footer>
+	<script src="./assets/scripts.js"></script>
 </body>
 
 </html>
