--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 					<label for="email">Email</label>
 					<input type="email" name="email" id="email" placeholder="Email">
 
-					<textarea name="message" id="message" cols="30" rows="10"
+					<textarea name="message" cols="30" rows="10"
 						placeholder="Votre message here..."></textarea>
 					<input type="submit" value="Envoyer" />
 				</form>
