--- a/index.html
+++ b/index.html
@@ -203,8 +203,7 @@
 					<label for="email">Email</label>
 					<input type="email" name="email" id="email" placeholder="Email">
 
-					<textarea  cols="30" rows="10"
-						placeholder="Votre message here..."></textarea>
+					<textarea  cols="30" rows="10"></textarea>
 					<input type="submit" value="Envoyer" />
 				</form>
 			</div>
