--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
 					<input type="text" name="nom" id="nom" placeholder="Nom">
 					<label for="email">Email</label>
 					<input type="email" name="email" id="email" placeholder="Email">
-
-					<textarea  cols="30" rows="10"></textarea>
+					<label for="txt" >Message</label>
+					<textarea  cols="30" rows="10" id="txt"></textarea>
 					<input type="submit" value="Envoyer" />
 				</form>
 			</div>
@@ -241,7 +241,7 @@
 					<li>
 						<i class="fa-brands fa-facebook"> 
 						<a href="https://www.facebook.com" target="_blank">
-							<span>Facebook</span>
+							<span class="social">Facebook</span>
 						</a>
 						</i>
 						
@@ -249,7 +249,7 @@
 					<li>
 						<i class="fa-brands fa-twitter"> 
 							<a href="https://www.twitter.com" target="_blank">
-								<span>twitter</span>
+								<span class="social">twitter</span>
 							</a>
 							</i>
 					</li>
