--- a/index.html
+++ b/index.html
@@ -3,43 +3,47 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Nina carduci: La révolution de la retouches photo, Shooting et album Photos</title>
+	<title>Nina carduci: La révolution de la retouche photo, Shooting et albumPhotos</title>
 	<meta name="description"
 		content="Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer. ">
+	
 	<!-- opengraph facebook -->
-	<link rel="shortcut icon" href="./assets/images/camera.png">
-	<meta property="og:title" content="Découvrez mon super site">
-	<meta property="og:description" content="Explorez des contenus passionnants et innovants.">
+	<meta property="og:site_name" content="Nina Carducci" />
+	<meta property="og:title" content="Découvrez mon site web">
+	<meta property="og:description" content="Explorez des photos passionnantes et innovantes sur mon site">
 	<meta property="og:image" content="https://exemple.com/image.jpg">
 	<meta property="og:url" content="https://exemple.com">
-	<!-- twitter cards -->
-	<meta name="twitter:title" content="Mon Site Web">
-	<meta name="twitter:description" content="Découvrez des contenus passionnants et innovants sur mon site.">
+	<!-- twittercards -->
+	<meta name="twitter:title" content="Nina Carducci">
+	<meta name="twitter:site" content="https://twitter.com/" />
+	<meta name="twitter:description" content="Découvrez des photos passionnantes et innovantes sur mon site.">
 	<meta name="twitter:image" content="https://exemple.com/image.jpg">
 	<meta name="twitter:card" content="summary_large_image">
 
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+
 	<link rel="stylesheet" href="./assets/style.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.googleapis.com" async>
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-		rel="stylesheet">
+		rel="stylesheet" async>
+
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 		integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.js"></script>
+		crossorigin="anonymous" referrerpolicy="no-referrer" async />
+
 	
+	<meta http-equiv="Cache-Control"  max-age=31536000>
 </head>
 
 <body>
 	<div class="top-header">
 		<h1 class="name">Nina Carducci</h1>
-		<div class="nav">
+		<div class="nav" id="nav">
 			<ul>
 				<li><a href="#about">À propos</a></li>
 				<li><a href="#gallery">Galerie</a></li>
@@ -202,8 +206,8 @@
 					<input type="text" name="nom" id="nom" placeholder="Nom">
 					<label for="email">Email</label>
 					<input type="email" name="email" id="email" placeholder="Email">
-					<label for="txt" >Message</label>
-					<textarea  cols="30" rows="10" id="txt"></textarea>
+					<label for="txt">Message</label>
+					<textarea cols="30" rows="10" id="txt"></textarea>
 					<input type="submit" value="Envoyer" />
 				</form>
 			</div>
@@ -218,16 +222,17 @@
 			Contact moi au : <br>
 			05 56 67 78 89
 		</p>
-	
+
 	</div>
 	<footer>
 		<h6>Contact nous:</h6>
 		<div class="infos">
-			
+
 			<div class="tel">
 				<i class="fa-solid fa-phone"></i> 05 56 67 78 89
 			</div>
-			<div class="horaire"><i class="fa-solid fa-clock"></i> Je réponds au téléphone du lundi au vendredi de:  <br />
+			<div class="horaire"><i class="fa-solid fa-clock"></i> Je réponds au téléphone du lundi au vendredi de:
+				<br />
 				10h à 19h.
 			</div>
 
@@ -239,29 +244,32 @@
 				<p>Reseaux sociaux: </p>
 				<ul>
 					<li>
-						<i class="fa-brands fa-facebook"> 
-						<a href="https://www.facebook.com" target="_blank">
-							<span class="social">Facebook</span>
-						</a>
+						<i class="fa-brands fa-facebook">
+							<a href="https://www.facebook.com" target="_blank">
+								<span class="social">Facebook</span>
+							</a>
 						</i>
-						
 					</li>
 					<li>
-						<i class="fa-brands fa-twitter"> 
+						<i class="fa-brands fa-twitter">
 							<a href="https://www.twitter.com" target="_blank">
 								<span class="social">twitter</span>
 							</a>
-							</i>
+						</i>
 					</li>
 				</ul>
-	
-	
+
+
 			</div>
 		</div>
 
-		
+
 
 	</footer>
+	<script src="./assets/bootstrap/bootstrap.bundle.js" ></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" ></script>
+	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
 </body>
 
