--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 	<meta property="og:site_name" content="Nina Carducci" />
 	<meta property="og:title" content="Découvrez mon site web">
 	<meta property="og:description" content="Explorez des photos passionnantes et innovantes sur mon site">
-	<meta property="og:image" content="https://exemple.com/image.jpg">
+	<meta property="og:image" content="https://raw.githubusercontent.com/zeinou1/P-9-SEO/main/assets/images/nina.webp">
 	<meta property="og:url" content="https://exemple.com">
 	<!-- twittercards -->
 	<meta name="twitter:title" content="Nina Carducci">
 	<meta name="twitter:site" content="https://twitter.com/" />
 	<meta name="twitter:description" content="Découvrez des photos passionnantes et innovantes sur mon site.">
-	<meta name="twitter:image" content="https://exemple.com/image.jpg">
+	<meta name="twitter:image" content="https://raw.githubusercontent.com/zeinou1/P-9-SEO/main/assets/images/nina.webp">
 	<meta name="twitter:card" content="summary_large_image">
 
 
@@ -216,54 +216,6 @@
 			</div>
 		</div>
 	</div>
-	<div class="contact" id="contacter">
-		<i class="far fa-times-circle" id="closeBtn"></i>
-		<p>
-			Contact moi au : <br>
-			05 56 67 78 89
-		</p>
-
-	</div>
-	<footer>
-		<h6>Contact nous:</h6>
-		<div class="infos">
-
-			<div class="tel">
-				<i class="fa-solid fa-phone"></i> 05 56 67 78 89
-			</div>
-			<div class="horaire"><i class="fa-solid fa-clock"></i> Je réponds au téléphone du lundi au vendredi de:
-				<br />
-				10h à 19h.
-			</div>
-
-			<div class="adresse"> <i class="fa-solid fa-address-book"></i> <strong> 68 avenue Alsace-Lorraine, 33200
-					Bordeaux.</strong></details>
-
-			</div>
-			<div class="reseaux">
-				<p>Reseaux sociaux: </p>
-				<ul>
-					<li>
-						<i class="fa-brands fa-facebook">
-							<a href="https://www.facebook.com" target="_blank">
-								<span class="social">Facebook</span>
-							</a>
-						</i>
-					</li>
-					<li>
-						<i class="fa-brands fa-twitter">
-							<a href="https://www.twitter.com" target="_blank">
-								<span class="social">twitter</span>
-							</a>
-						</i>
-					</li>
-				</ul>
-
-
-			</div>
-		</div>
-
-
 
 	</footer>
 	<script src="./assets/bootstrap/bootstrap.bundle.js" ></script>
