--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Nina carduci: La révolution de la retouche photo, Shooting et albumPhotos</title>
-	<meta name="description"
-		content="Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer. ">
+	<meta name="description" content="Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer. ">
 	
 	<!-- opengraph facebook -->
 	<meta property="og:site_name" content="Nina Carducci" />
-	<meta property="og:title" content="Découvrez mon site web">
+	<meta property="og:title" content=" La révolution de la photographe professionnelle">
 	<meta property="og:description" content="Explorez des photos passionnantes et innovantes sur mon site">
 	<meta property="og:image" content="https://raw.githubusercontent.com/zeinou1/P-9-SEO/main/assets/images/nina.webp">
-	<meta property="og:url" content="https://exemple.com">
+	<meta property="og:url" content="https://zeinou1.github.io/P-9-SEO/">
 	<!-- twittercards -->
-	<meta name="twitter:title" content="Nina Carducci">
-	<meta name="twitter:site" content="https://twitter.com/" />
-	<meta name="twitter:description" content="Découvrez des photos passionnantes et innovantes sur mon site.">
+	<meta name="twitter:title" content="Nina Carducci, La révolution de la photographe professionnelle">
+	<meta name="twitter:site" content="https://zeinou1.github.io/P-9-SEO/" />
+	<meta name="twitter:description" content="Découvrez des photos professionnelle et innovantes sur mon site.">
 	<meta name="twitter:image" content="https://raw.githubusercontent.com/zeinou1/P-9-SEO/main/assets/images/nina.webp">
 	<meta name="twitter:card" content="summary_large_image">
 
@@ -28,10 +27,9 @@
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com" async>
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link
-		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
+	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet" async>
-
+   <!-- font-awesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 		integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" async />
@@ -223,6 +221,32 @@
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" ></script>
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
+	<script type="application/ld+json">
+		{
+		  "@context": "http://schema.org",
+		  "@type": "LocalBusiness",
+		  "name": "nina carducci",
+		  "image": "https://raw.githubusercontent.com/zeinou1/P-9-SEO/main/assets/images/nina.webp",
+		  "address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine ",
+			"addressLocality": "Bordeaux",
+			"postalCode": " 33200",
+			"addressCountry": "FR"
+		  },
+		  "telephone": "05 56 67 78 89",
+		  <!-- "priceRange": "50€-45", -->
+		  "openingHours": "lundi-vendredi 10:00-19:00",
+		  "url": "https://zeinou1.github.io/P-9-SEO/",
+		  "sameAs": [
+			"http://www.facebook.com/ninacarducci",
+			"http://www.twitter.com/ninacarducci"
+		  ],
+		  "description": "Des photos de qualites ? t'es au bon endroit, ninacarducci vous facilite la vie avec tous qui est retouche et Shooting"
+		}
+		</script>
+	
+		
 </body>
 
 </html>
