--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Nina carduci: La révolution de la retouche photo, Shooting et albumPhotos</title>
-	<meta name="description" content="Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer. ">
-	
+	<meta name="description"
+		content="Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer. ">
+
 	<!-- opengraph facebook -->
 	<meta property="og:site_name" content="Nina Carducci" />
 	<meta property="og:title" content=" La révolution de la photographe professionnelle">
@@ -27,15 +28,16 @@
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com" async>
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
+	<link
+		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet" async>
-   <!-- font-awesome -->
+	<!-- font-awesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 		integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" async />
 
-	
-	<meta http-equiv="Cache-Control"  max-age=31536000>
+
+	<meta http-equiv="Cache-Control" max-age=31536000>
 </head>
 
 <body>
@@ -216,9 +218,9 @@
 	</div>
 
 	</footer>
-	<script src="./assets/bootstrap/bootstrap.bundle.js" ></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" ></script>
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
 	<script type="application/ld+json">
@@ -235,7 +237,7 @@
 			"addressCountry": "FR"
 		  },
 		  "telephone": "05 56 67 78 89",
-		  <!-- "priceRange": "50€-45", -->
+		  "priceRange": "50€-45",
 		  "openingHours": "lundi-vendredi 10:00-19:00",
 		  "url": "https://zeinou1.github.io/P-9-SEO/",
 		  "sameAs": [
@@ -244,9 +246,9 @@
 		  ],
 		  "description": "Des photos de qualites ? t'es au bon endroit, ninacarducci vous facilite la vie avec tous qui est retouche et Shooting"
 		}
-		</script>
-	
-		
+    </script>
+
+
 </body>
 
 </html>
