--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Nina carduci: La révolution de la retouche photo, Shooting et albumPhotos</title>
+
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+
+	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
+		rel="stylesheet">
+	<title>Ninaci: La révolution de la retouche photo, Shooting et albumPhotos</title>
 	<meta name="description"
 		content="Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer. ">
 
@@ -20,21 +29,9 @@
 	<meta name="twitter:image" content="https://raw.githubusercontent.com/zeinou1/P-9-SEO/main/assets/images/nina.webp">
 	<meta name="twitter:card" content="summary_large_image">
 
+	<meta http-equiv="Cache-Control" content="max-age=3600, must-revalidate">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-
-	<link rel="stylesheet" href="./assets/style.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com" async>
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link
-		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-		rel="stylesheet" async>
-	<!-- font-awesome -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-		integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" async />
 
 
 	<meta http-equiv="Cache-Control" max-age=31536000>
@@ -50,7 +47,8 @@
 				<li><a href="#services">Service</a></li>
 				<li><a href="#contact">Contact</a></li>
 				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-						target="_blank"><img src="assets/images/instagram.png" alt="Logo instagram"></a></li>
+						target="_blank"><img src="assets/images/instagram.png" width="20" height="20"
+							alt="Logo instagram"></a></li>
 			</ul>
 		</div>
 	</div>
@@ -64,166 +62,194 @@
 				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
 					aria-label="Slide 3"></button>
 			</div>
-			<div class="carousel-inner">
+			<!-- <div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji.webp" class="d-block w-100" alt="Photo ryoji-iwata">
+					<img srcset="./assets/images/slider/ryoji.webp 1918w,
+							./assets/images/slider/ryoji.webp 1500w, 
+							./assets/images/slider/ryoji.webp 758w" sizes="100vw" src="./assets/images/slider/ryoji.webp"
+						class="d-block w-100 h-auto" width="1918" height="888" alt="ryoji" loading="lazy">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas.webp" class="d-block w-100" alt="Photo nicholas-green">
+					<img srcset="./assets/images/slider/nicholas.webp 1918w ,
+							./assets/images/slider/nicholas.webp 1500w,
+							./assets/images/slider/nicholas.webp 758w" sizes="100vw" " src=" ./assets/images/slider/nicholas.webp"
+						class="d-block w-100 h-auto" width="1918" height="888" alt="nicholas" loading="lazy">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/edward.webp" class="d-block w-100" alt="Photo edward-cisneros">
+					<img srcset="./assets/images/slider/edward.webp 1918w,
+								./assets/images/slider/edward.webp 1500w, 
+								./assets/images/slider/edward.webp 758w" sizes="100vw" src="./assets/images/slider/edward.webp"
+						class="d-block w-100 h-auto" width="1918" height="888" alt="edward" loading="lazy">
+				</div> -->
+				<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img loading="lazy" src="./assets/images/slider/ryoji.webp" class="d-block w-100 h-auto" width="1919px" height="888px" alt="Photo ryoji-iwata" >
+				</div>
+				<div class="carousel-item">
+					<img loading="lazy" src="./assets/images/slider/nicholas.webp" class="d-block w-100 h-auto" width="1919px" height="888px" alt="Photo nicholas-green" >
+				</div>
+				<div class="carousel-item">
+					<img loading="lazy" src="./assets/images/slider/edward.webp" class="d-block w-100 h-auto" width="1919px" height="888px" alt="Photo edward-cisneros" >
+				</div>    </div>
+				
+
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+					data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+					data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</button>
+			</div>
+		</div>
+		<div id="about">
+			<div class="picture left">
+				<img src="./assets/images/nina.webp" width="378" height="360" alt="Photo nina">
+			</div>
+			<div id="about-me">
+				<h2 class="about-me__title">A propos de moi</h2>
+				<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
+					prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
+					immortels, voilà ce qui me fait vibrer.</p>
+				<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie :
+					le
+					figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos
+					yeux,
+					ou le partager au plus grand nombre.
+					C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon
+					approche, ma
+					technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de
+					la
+					tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
+			</div>
+		</div>
+		<div id="gallery">
+			<h3 class="title">Portfolio</h3>
+			<div class="container py-3">
+				<div class="gallery" style="display: none">
+					<img data-gallery-tag="Concert" class="gallery-item"
+						src="./assets/images/gallery/concerts/aaron.webp" alt="aaron-paul" />
+
+					<img data-gallery-tag="Entreprises" class="gallery-item"
+						src="./assets/images/gallery/entreprise/ali.webp" alt="ali-morshedlou" />
+
+					<img data-gallery-tag="Entreprises" class="gallery-item"
+						src="./assets/images/gallery/entreprise/jason.webp" alt="jason-goodman" />
+
+					<img data-gallery-tag="Mariages" class="gallery-item"
+						src="./assets/images/gallery/mariage/hannah.webp" alt="hannah-busing" />
+
+					<img data-gallery-tag="Portrait" class="gallery-item"
+						src="./assets/images/gallery/portraits/ade.webp" alt="ade-tunji" />
+
+					<img data-gallery-tag="Mariages" class="gallery-item"
+						src="./assets/images/gallery/mariage/jakob.webp" alt="jakob-owens" />
+
+					<img data-gallery-tag="Portrait" class="gallery-item"
+						src="./assets/images/gallery/portraits/nino.webp" alt="nicholas-green" />
+
+					<img data-gallery-tag="Concert" class="gallery-item"
+						src="./assets/images/gallery/concerts/austin.webp" alt="austin-neill" />
+
+					<img data-gallery-tag="Entreprises" class="gallery-item"
+						src="./assets/images/gallery/entreprise/campos.webp" alt="mateus-campos" />
 				</div>
 			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-				data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-				data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button>
+			<div class="quote">
+				<figure>
+					<blockquote>
+						<p class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
+							fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
+							n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la
+							vérité.
+						</p>
+					</blockquote>
+					<figcaption class="quote__author">- Richard Avedon</figcaption>
+				</figure>
+			</div>
 		</div>
-	</div>
-	<div id="about">
-		<div class="picture left">
-			<img src="./assets/images/nina.webp" alt="Photo nina">
-		</div>
-		<div id="about-me">
-			<h2 class="about-me__title">A propos de moi</h2>
-			<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
-				prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
-				immortels, voilà ce qui me fait vibrer.</p>
-			<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le
-				figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux,
-				ou le partager au plus grand nombre.
-				C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma
-				technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la
-				tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
-		</div>
-	</div>
-	<div id="gallery">
-		<h3 class="title">Portfolio</h3>
-		<div class="container py-3">
-			<div class="gallery" style="display: none">
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron.webp"
-					alt="aaron-paul" />
 
-				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/ali.webp" alt="ali-morshedlou" />
+		<div id="services">
+			<h4 class="title">Mes services</h4>
+			<div class="container">
+				<div class="service">
+					<div class="service__description">
+						<h5>Shooting photo</h5>
+						<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace
+							en
+							Île-de-France pour réaliser vos photos</p>
+					</div>
+					<div class="service__price">
+						<h5>350€/demi journée</h5>
+						<span>Matériel, déplacement inclus</span>
+					</div>
 
-				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/jason.webp" alt="jason-goodman" />
-
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah.webp"
-					alt="hannah-busing" />
-
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade.webp"
-					alt="ade-tunji" />
-
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob.webp"
-					alt="jakob-owens" />
-
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino.webp"
-					alt="nicholas-green" />
-
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin.webp"
-					alt="austin-neill" />
-
-				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/campos.webp" alt="mateus-campos" />
+				</div>
+				<div class="service">
+					<div class="service__description">
+						<h5>Retouches</h5>
+						<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu
+							optimal pour vos publications</p>
+					</div>
+					<div class="service__price">
+						<h6>50€/photo</h6>
+						<span>2 AR par photo</span>
+					</div>
+				</div>
+				<div class="service">
+					<div class="service__description">
+						<h5>Album photos</h5>
+						<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers
+							un
+							album photo personnalisé</p>
+					</div>
+					<div class="service__price">
+						<h5>400€ album A4</h5>
+						<span>30 pages recto/verso</span>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="quote">
 			<figure>
 				<blockquote>
-					<p class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
-						fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
-						n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.
-					</p>
+					<p class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des
+						traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
 				</blockquote>
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
 		</div>
-	</div>
-	<div id="services">
-		<h4 class="title">Mes services</h4>
-		<div class="container">
-			<div class="service">
-				<div class="service__description">
-					<h5>Shooting photo</h5>
-					<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en
-						Île-de-France pour réaliser vos photos</p>
+		<div id="contact">
+			<div class="container">
+				<div class="form-container">
+					<h6>Une question ? Une demande de devis ?</h6>
+					<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
+					<form action="" method="post">
+						<label for="nom">Nom</label>
+						<input type="text" name="nom" id="nom" placeholder="Nom">
+						<label for="email">Email</label>
+						<input type="email" name="email" id="email" placeholder="Email">
+						<label for="txt">Message</label>
+						<textarea cols="30" rows="10" id="txt"></textarea>
+						<input type="submit" value="Envoyer" />
+					</form>
 				</div>
-				<div class="service__price">
-					<h5>350€/demi journée</h5>
-					<span>Matériel, déplacement inclus</span>
-				</div>
-
-			</div>
-			<div class="service">
-				<div class="service__description">
-					<h5>Retouches</h5>
-					<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu
-						optimal pour vos publications</p>
-				</div>
-				<div class="service__price">
-					<h6>50€/photo</h6>
-					<span>2 AR par photo</span>
-				</div>
-			</div>
-			<div class="service">
-				<div class="service__description">
-					<h5>Album photos</h5>
-					<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un
-						album photo personnalisé</p>
-				</div>
-				<div class="service__price">
-					<h5>400€ album A4</h5>
-					<span>30 pages recto/verso</span>
+				<div class="picture right">
+					<img src="./assets/images/camera-.webp" width="370" height="370" alt="Image nina">
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="quote">
-		<figure>
-			<blockquote>
-				<p class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des
-					traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
-			</blockquote>
-			<figcaption class="quote__author">- Richard Avedon</figcaption>
-		</figure>
-	</div>
-	<div id="contact">
-		<div class="container">
-			<div class="form-container">
-				<h6>Une question ? Une demande de devis ?</h6>
-				<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-				<form action="" method="post">
-					<label for="nom">Nom</label>
-					<input type="text" name="nom" id="nom" placeholder="Nom">
-					<label for="email">Email</label>
-					<input type="email" name="email" id="email" placeholder="Email">
-					<label for="txt">Message</label>
-					<textarea cols="30" rows="10" id="txt"></textarea>
-					<input type="submit" value="Envoyer" />
-				</form>
-			</div>
-			<div class="picture right">
-				<img src="./assets/images/camera-.webp" alt="Image nina">
-			</div>
-		</div>
-	</div>
 
-	</footer>
-	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.js"></script>
-	<script src="./assets/scripts.js"></script>
-	<script type="application/ld+json">
+		</footer>
+		<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+		<script src="./assets/maugallery.js"></script>
+		<script src="./assets/scripts.js"></script>
+		<script type="application/ld+json">
 		{
 		  "@context": "http://schema.org",
 		  "@type": "LocalBusiness",
