--- a/index.html
+++ b/index.html
@@ -130,32 +130,32 @@
 		<h3 class="title">Portfolio</h3>
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
-				<img data-gallery-tag="Concert" class="gallery-item" loading="lazy" src="./assets/images/gallery/concerts/aaron.webp"
-					alt="aaron-paul"  />
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron.webp"
+					alt="aaron-paul" loading="lazy">
 
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-				loading="lazy"	src="./assets/images/gallery/entreprise/ali.webp" alt="ali-morshedlou" />
+				src="./assets/images/gallery/entreprise/ali.webp" alt="ali-morshedlou" loading="lazy">
 
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-				loading="lazy"	src="./assets/images/gallery/entreprise/jason.webp" alt="jason-goodman"  />
+					src="./assets/images/gallery/entreprise/jason.webp" alt="jason-goodman" loading="lazy">
 
 				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah.webp"
-					alt="hannah-busing"  />
+					alt="hannah-busing" loading="lazy">
 
-				<img data-gallery-tag="Portrait" class="gallery-item" loading="lazy" src="./assets/images/gallery/portraits/ade.webp"
-					alt="ade-tunji"  />
+				<img data-gallery-tag="Portrait" class="gallery-item"  src="./assets/images/gallery/portraits/ade.webp"
+					alt="ade-tunji" loading="lazy">
 
-				<img data-gallery-tag="Mariages" class="gallery-item" loading="lazy" src="./assets/images/gallery/mariage/jakob.webp"
-					alt="jakob-owens"  />
+				<img data-gallery-tag="Mariages" class="gallery-item"  src="./assets/images/gallery/mariage/jakob.webp"
+					alt="jakob-owens" loading="lazy" >
 
-				<img data-gallery-tag="Portrait" class="gallery-item" loading="lazy" src="./assets/images/gallery/portraits/nino.webp"
-					alt="nicholas-green" />
+				<img data-gallery-tag="Portrait" class="gallery-item"  src="./assets/images/gallery/portraits/nino.webp"
+					alt="nicholas-green" loading="lazy">
 
-				<img data-gallery-tag="Concert" class="gallery-item" loading="lazy" src="./assets/images/gallery/concerts/austin.webp"
-					alt="austin-neill" />
+				<img data-gallery-tag="Concert" class="gallery-item"  src="./assets/images/gallery/concerts/austin.webp"
+					alt="austin-neill" loading="lazy">
 
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-				loading="lazy"	src="./assets/images/gallery/entreprise/campos.webp" alt="mateus-campos"  />
+					src="./assets/images/gallery/entreprise/campos.webp" alt="mateus-campos" loading="lazy">
 			</div>
 		</div>
 		<div class="quote">
