--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,28 +11,26 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
-	<title>Ninaci: La révolution de la retouche photo, Shooting et albumPhotos</title>
+
+	<title>Nina carducci : La révolution de la retouche photo, du shooting et des albums photos.</title>
 	<meta name="description"
 		content="Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer. ">
 
-	<!-- opengraph facebook -->
+	<!-- open graph facebook -->
 	<meta property="og:site_name" content="Nina Carducci" />
-	<meta property="og:title" content=" La révolution de la photographe professionnelle">
-	<meta property="og:description" content="Explorez des photos passionnantes et innovantes sur mon site">
+	<meta property="og:title" content=" Nina Carducci, L'évolution de la photographe professionnelle">
+	<meta property="og:description" content="Parcourez mon site pour découvrir des photos passionnantes et innovantes.">
 	<meta property="og:image" content="https://raw.githubusercontent.com/zeinou1/P-9-SEO/main/assets/images/nina.webp">
 	<meta property="og:url" content="https://zeinou1.github.io/P-9-SEO/">
-	<!-- twittercards -->
-	<meta name="twitter:title" content="Nina Carducci, La révolution de la photographe professionnelle">
+	<!-- twitter cards -->
+	<meta name="twitter:title" content="Nina Carducci, L'évolution de la photographe professionnelle">
 	<meta name="twitter:site" content="https://zeinou1.github.io/P-9-SEO/" />
-	<meta name="twitter:description" content="Découvrez des photos professionnelle et innovantes sur mon site.">
+	<meta name="twitter:description"
+		content="Parcourez mon site pour découvrir des photos passionnantes et innovantes.">
 	<meta name="twitter:image" content="https://raw.githubusercontent.com/zeinou1/P-9-SEO/main/assets/images/nina.webp">
 	<meta name="twitter:card" content="summary_large_image">
 
 	<meta http-equiv="Cache-Control" content="max-age=3600, must-revalidate">
-
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
 	<meta http-equiv="Cache-Control" max-age=31536000>
 </head>
 
@@ -62,35 +60,31 @@
 					aria-label="Slide 3"></button>
 			</div>
 			<div class="carousel-inner">
+				<div class="carousel-item">
+
+					<img srcset="
+					        ./assets/images/slider/ryoji2.webp 1921w,
+							./assets/images/slider/ryoji2.webp 1024w, 
+							./assets/images/slider/ryoji2.webp 375w" sizes="100vw" src="./assets/images/slider/ryoji2.webp"
+						class="d-block w-100 h-auto" width="1921" height="888" alt="ryoji" loading="lazy">
+
+				</div>
 				<div class="carousel-item active">
+
 					<img srcset="
-					        ./assets/images/slider/ryoji.webp 1918w,
-							./assets/images/slider/ryoji.webp 1434w, 
-							./assets/images/slider/ryoji.webp 758w" 
-							sizes="100vw" 
-							src="./assets/images/slider/ryoji.webp"
-						  class="d-block w-100 h-auto" 
-						  width="1918" height="888" alt="ryoji" loading="lazy">
+							./assets/images/slider/nicholas2.webp 1921w ,
+							./assets/images/slider/nicholas2.webp 1024w,
+							./assets/images/slider/nicholas2.webp 375w" sizes="100vw" src="./assets/images/slider/nicholas2.webp"
+						class="d-block w-100 h-auto" width="1921" height="888" alt="nicholas" loading="lazy">
+
 				</div>
+
 				<div class="carousel-item">
 					<img srcset="
-					        ./assets/images/slider/nicholas.webp 1918w ,
-							./assets/images/slider/nicholas.webp 1434w,
-							./assets/images/slider/nicholas.webp 758w" 
-						sizes="100vw" 
-						src=" ./assets/images/slider/nicholas.webp"
-						class="d-block w-100 h-auto" 
-						width="1918" height="888" alt="nicholas" loading="lazy">
-				</div>
-				<div class="carousel-item">
-					<img srcset="
-					       ./assets/images/slider/edward.webp 1918w,
-				           ./assets/images/slider/edward.webp 1434w, 
-					       ./assets/images/slider/edward.webp 758w" 
-								sizes="100vw"
-				         src="./assets/images/slider/edward.webp"
-						 class="d-block w-100 h-auto" 
-						 width="1918" height="888" alt="edward" loading="lazy">
+					       ./assets/images/slider/edward2.webp 1921w,
+				           ./assets/images/slider/edward2.webp 1024w, 
+					       ./assets/images/slider/edward2.webp 375w" sizes="100vw" src="./assets/images/slider/edward2.webp"
+						class="d-block w-100 h-auto" width="1921" height="888" alt="edward" loading="lazy">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -134,7 +128,7 @@
 					alt="aaron-paul" loading="lazy">
 
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-				src="./assets/images/gallery/entreprise/ali.webp" alt="ali-morshedlou" loading="lazy">
+					src="./assets/images/gallery/entreprise/ali.webp" alt="ali-morshedlou" loading="lazy">
 
 				<img data-gallery-tag="Entreprises" class="gallery-item"
 					src="./assets/images/gallery/entreprise/jason.webp" alt="jason-goodman" loading="lazy">
@@ -142,16 +136,16 @@
 				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah.webp"
 					alt="hannah-busing" loading="lazy">
 
-				<img data-gallery-tag="Portrait" class="gallery-item"  src="./assets/images/gallery/portraits/ade.webp"
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade.webp"
 					alt="ade-tunji" loading="lazy">
 
-				<img data-gallery-tag="Mariages" class="gallery-item"  src="./assets/images/gallery/mariage/jakob.webp"
-					alt="jakob-owens" loading="lazy" >
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob.webp"
+					alt="jakob-owens" loading="lazy">
 
-				<img data-gallery-tag="Portrait" class="gallery-item"  src="./assets/images/gallery/portraits/nino.webp"
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino.webp"
 					alt="nicholas-green" loading="lazy">
 
-				<img data-gallery-tag="Concert" class="gallery-item"  src="./assets/images/gallery/concerts/austin.webp"
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin.webp"
 					alt="austin-neill" loading="lazy">
 
 				<img data-gallery-tag="Entreprises" class="gallery-item"
@@ -233,7 +227,7 @@
 					<label for="email">Email</label>
 					<input type="email" name="email" id="email" placeholder="Email">
 					<label for="txt">Message</label>
-					<textarea cols="30" rows="10" id="txt"></textarea>
+					<textarea cols="30" rows="10" id="txt" placeholder="votre Message ici..."></textarea>
 					<input type="submit" value="Envoyer" />
 				</form>
 			</div>
@@ -243,11 +237,10 @@
 		</div>
 	</section>
 
-	<script async src="./assets/maugallery.js"></script>
-	<script async src="./assets/scripts.js"></script>
-	<script async src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
-	<script async src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+	<script src="./assets/maugallery.js"></script>
+	<script src="./assets/scripts.js"></script>
 
 	<script type="application/ld+json">
 		{
@@ -264,7 +257,7 @@
 		  },
 		  "telephone": "05 56 67 78 89",
 		  "priceRange": "50€-45",
-		  "openingHours": "lundi-vendredi 10:00-19:00",
+		  "openingHours": "Lundi-Vendredi 10:00-19:00",
 		  "url": "https://zeinou1.github.io/P-9-SEO/",
 		  "sameAs": [
 			"http://www.facebook.com/ninacarducci",
