--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 	<meta name="twitter:image" content="https://raw.githubusercontent.com/zeinou1/P-9-SEO/main/assets/images/nina.webp">
 	<meta name="twitter:card" content="summary_large_image">
 
-	<meta http-equiv="Cache-Control" content="max-age=3600, must-revalidate">
-	<meta http-equiv="Cache-Control" max-age=31536000>
+
 </head>
 
 <body>
@@ -221,7 +220,7 @@
 			<div class="form-container">
 				<h6>Une question ? Une demande de devis ?</h6>
 				<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-				<form action="" method="post">
+				<form method="post">
 					<label for="nom">Nom</label>
 					<input type="text" name="nom" id="nom" placeholder="Nom">
 					<label for="email">Email</label>
@@ -263,7 +262,7 @@
 			"http://www.facebook.com/ninacarducci",
 			"http://www.twitter.com/ninacarducci"
 		  ],
-		  "description": "Des photos de qualitees ? t'es au bon endroit, ninacarducci vous facilite la vie avec tous qui est retouche et Shooting"
+		  "description": "Des photos de qualitees ? t'es au bon endroit, nina carducci vous facilite la vie avec tous qui est retouche et Shooting"
 		}
     </script>
 </body>
